# robust_situational_awareness

./: .gitignore  README.md  clear_hf_cache.sh  pyproject.toml  results.md  setup.sh
experiments/: benchmark_model.py  benchmark_with_steering.py  benchmark_with_vectors.py  compare_steered_vs_unsteered.py  compare_vectors_versions.py  extracted_vector_analysis.py  plot_idlev_conditions.py  plot_scores.py  plot_steering_scores.py  reduce_vectors.py  run_and_push_vectors.sh  steer_free_generation.py
private_completions/: llama318binstruct_6_workspacerobust_situational_awarenesssadself_recognitiontext_corpusraw_dataabstractsjsonl_128_128.jsonl  llama318binstruct_6_workspacerobust_situational_awarenesssadself_recognitiontext_corpusraw_dataforumjsonl_128_128.jsonl  llama318binstruct_6_workspacerobust_situational_awarenesssadself_recognitiontext_corpusraw_dataforumjsonl_64_64.jsonl  llama318binstruct_6_workspacerobust_situational_awarenesssadself_recognitiontext_corpusraw_datawikipediajsonl_64_64.jsonl  llama318binstruct_9_workspacerobust_situational_awarenesssadself_recognitiontext_corpusraw_dataforumjsonl_64_64.jsonl  mockllm_2_UsersoscargilgDevrobust_situational_awarenesssadself_recognitiontext_corpusraw_datawikipediajsonl_128_128.jsonl
provider_wrapper/: README.md  pyproject.toml
provider_wrapper/provider_wrapper/: __init__.py  data_models.py  gptoss_provider.py  huggingface_provider.py  mock_provider.py  provider_utils.py  transformer_lens_provider.py
sad/: task.py  templates.py  utils.py
scripts/: custom.sh  launch_parallel_benchmarks.sh  steering_sweep.sh  steering_sweep_parallel.sh
(+213 files in other folders)
