[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robust_situational_awareness"
version = "0.1"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "setuptools==68.0.0",
    "tokenizers==0.21.4",
    "nltk==3.8.1",
    "datasets==2.19.0",
    "zstandard>=0.22.0",
    "torch==2.7.1",
    "transformers==4.55.0",
    "huggingface_hub==0.34.4",
    "bitsandbytes",
    "accelerate>=1.9.0",
    "backoff",
    "fire",
    "tqdm",
    "openai-harmony",
    "transformer-lens",
    "provider_wrapper @ file:///workspace/robust_situational_awareness/provider_wrapper"
]

[tool.setuptools]
packages = ["sad"]

